fixed width on .searchtext - now adjusts to size of page fixed .searchtext positioning close to searchicon added align-self:center to search icons cleaned up search/center improved formatting changed the names of some classes for easier readability

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -8,7 +8,7 @@ body {
 
 }
 
- /* Top of Page */ 
+
 
 
 
@@ -16,14 +16,14 @@ body {
 a:link, a:visited {
 text-decoration:none;
 padding: 10px;
-color:black;
-}
+color:black;}
 a:hover {
 text-decoration: underline;
 color:black; }
 a:active { text-decoration:none;
 color:black;}
 
+ /* Top of Page */ 
 #top { 
     padding: 30px;
     display:block;
@@ -31,7 +31,6 @@ color:black;}
     color:#222;
     background-color: white;
     }
-
 
 .top-left {
 position:absolute;
@@ -45,21 +44,16 @@ top: 20px;
 right: 60px;
 margin-right: 15px;
 }
-
-
 .tricons
 {
 position:absolute;
 top:5px;
 right:10px;
 margin-right: 0px;
-
 }
+
 /* Center */
-
-
 .glogo {
-
 margin: 20px;
 background-color: white;
 }
@@ -67,52 +61,50 @@ background-color: white;
 display:flex;
 flex-wrap:wrap;
 flex-direction:column;
-justify-content:center;
 align-items:center;
 background-color: white;
-
-
 }
-
-
 /* search + buttons  */
 .search {
 display:flex;
 border-radius: 25px;
 border: 1px solid #D3D3D3;
-align-items:center;
 background-color: white;
 }
-.searchbar {
-
-height:20px;
+.searchtext {
+height:30px;
 border:none;
-margin: 10px 30px 10px 30px;
-width:30vw;
-outline:none
+margin:auto;
+margin: 5px 0px 5px 0px;
+width:55vw;
+outline:none;
+position: relative;
+right:100px;
+
+
 }
 .mic {
     height:24px;
     opacity:.7;
-    margin 5px 0px 0px 100px;
+    margin -5px 0px 0px 100px;
     padding-right: 10px;
+    align-self: center;
     }
 .searchicon {
     height:24px; 
     opacity:.7;
     margin: 0px 100px 0px 0px;
     padding-left: 10px;
+    align-self: center;
     }
 
-
-button {
-
+.searchbutton {
 margin: 25px 15px 10px 15px;;
 background-color:white;
 border:none;
 padding: 5px 20px 5px 20px;
 }
-button:hover {
+.searchbutton:hover {
 border:1px solid #D3D3D3;
 color:#222;
 }
@@ -129,49 +121,36 @@ max-height:55vh;
 background-color: white;
 }
 
-/*buffer bottom */
+/*buffer bottom
 
 .bufferb {
     display:block;
 
 min-height: 20vh;
 max-height:55vh;
-
-}
-
-
-
+*/
 .bottom {
 position: absolute;
 bottom: 15px;
 text-align: center;
 width:95%;
 opacity:.7;
-z-index: -1;
- } 
-
+z-index: -1; } 
 .b-center { 
     position: relative;
-   bottom:30px;
-     }
-     
+   bottom:30px;     }     
 .b-left { 
  float:left;
- padding-left: 65px; 
- }
-
+ padding-left: 65px; }
  .b-right {
 float:right;
-padding-right: 105px;
-      }
+padding-right: 105px;      }
 
 body {
 min-height:100px;
 font-size: 14px;
 font-family: 'nato', sans-serif;
 height:95vh;
-max-height: 100vh;
-
-}
+max-height: 100vh;}
 
 
